# bookstore2

./: .dockerignore  AGENTS.md  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
core/: settings.py  urls.py
order/: tests.py  tests.txt
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py  oreder_viewset.py
product/: factories.py  tests.txt
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
