[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "Jonas Maia", email = "jonasgmaia2@gmail.com"}
]
requires-python = ">=3.14" 
dependencies = [
    "django (>=6.0.3,<7.0.0)", # Adicionei o Django aqui
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)"
]